# sift

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE-APACHE-2.0  LICENSE-MIT  README.md  REVIEW_PLAN.md  SECURITY.md  cliff.toml
benchsuite/: README.md  benchsuite  (+1 more)
crates/cli/: AGENTS.md  Cargo.toml  README.md
crates/cli/benches/: cli.rs  e2e.rs  engine.rs  entry.rs  filter.rs  ignore.rs  output.rs  paths.rs  pattern.rs  search.rs  support.rs
crates/cli/src/: cli.rs  config.rs  daemon.rs  engine.rs  filter.rs  ignore.rs  lib.rs  main.rs  output.rs  paths.rs  pattern.rs  search.rs  update.rs
crates/cli/src/format/: collection.rs  event.rs  mod.rs  printer.rs  stats.rs
crates/cli/src/format/output/: format.rs  mod.rs  mode.rs  style.rs
crates/cli/src/format/sink/: json.rs  mod.rs  result.rs  standard.rs  summary.rs
crates/cli/src/grep/: argv.rs  engine.rs  filter.rs  ignore.rs  input.rs  mod.rs  output.rs  paths.rs  pattern.rs  run.rs  search.rs
crates/cli/src/index/: command.rs  daemon.rs  mod.rs  selection.rs
crates/cli/src/index/daemon/: coalesce.rs  coordinator.rs  error.rs  ipc.rs  mod.rs  serve.rs  spawn.rs  watch.rs
crates/cli/tests/: integration_binary.rs  integration_config.rs  integration_context.rs  integration_daemon.rs  integration_encoding.rs  integration_engine.rs  integration_errors.rs  integration_filter.rs  integration_glob.rs  integration_ignore.rs  integration_json.rs  integration_modes.rs  integration_null_color.rs  integration_output.rs  integration_paths.rs  integration_patterns.rs  integration_pcre2.rs  integration_preprocess.rs  integration_replace.rs  integration_search.rs  integration_sort.rs  integration_stats.rs  integration_stdin.rs  integration_threading.rs  integration_update.rs
crates/cli/tests/common/: mod.rs
crates/core/: AGENTS.md  Cargo.toml  README.md
crates/core/benches/: PROFILING.md  README.md  candidates.rs  grep.rs  index.rs  query.rs  search.rs
crates/core/benches/common/: criterion_config.rs  fixtures.rs  mod.rs
crates/core/src/: candidate.rs  lib.rs  parallel.rs  planner.rs  verify.rs
crates/core/src/candidates/: candidates.rs  collection.rs  coverage.rs  indexed.rs  mod.rs  narrowing.rs  plan.rs  planner.rs  query.rs  request.rs  resolve.rs  resolved.rs  scope.rs  selection.rs  source.rs  spec.rs
crates/core/src/corpus/: candidate.rs  coverage.rs  mod.rs  order.rs  walk.rs
crates/core/src/corpus/filter/: mod.rs
crates/core/src/grep/: AGENTS.md  README.md  candidates.rs  collection.rs  compile.rs  compiled.rs  corpus.rs  error.rs  execute.rs  filter.rs  input.rs  matcher.rs  mod.rs  policy.rs  query.rs  report.rs  session.rs  stats.rs  types.rs
crates/core/src/grep/candidates/: mod.rs  walk.rs
crates/core/src/grep/compile/: error.rs  mod.rs
crates/core/src/grep/emit/: format.rs  mod.rs  result.rs  stats.rs
crates/core/src/grep/engine/: compile.rs  matcher.rs  mod.rs  search.rs
crates/core/src/grep/execution/: candidate.rs  config.rs  error.rs  format.rs  json.rs  mod.rs  standard.rs  stats.rs  summary.rs  walk.rs
crates/core/src/grep/filter/: candidate.rs  config.rs  error.rs  ignore.rs  mod.rs  type_filter.rs
crates/core/src/grep/matcher/: error.rs  mod.rs
crates/core/src/grep/options/: mod.rs
crates/core/src/grep/output/: error.rs  format.rs  mod.rs  mode.rs  passthru.rs  style.rs
crates/core/src/grep/pattern/: compile.rs  mod.rs  search.rs
crates/core/src/grep/query/: matcher.rs  mod.rs
crates/core/src/grep/request/: mod.rs
crates/core/src/grep/runner/: mod.rs
crates/core/src/grep/scan/: json.rs  mod.rs  standard.rs  summary.rs
crates/core/src/grep/search/: compiled.rs  compiler.rs  mod.rs  query.rs  run.rs
crates/core/src/grep/sink/: json.rs  mod.rs  result.rs  standard.rs  style.rs  summary.rs
crates/core/src/index/: AGENTS.md  README.md  artifacts.rs  builder.rs  config.rs  contract.rs  error.rs  kinds.rs  maintenance.rs  meta.rs  mmap.rs  mod.rs  paths.rs  registry.rs  search.rs  snapshot.rs  store.rs  trigram.rs
crates/core/src/index/daemon/: mod.rs  op.rs  wire.rs
crates/core/src/index/ngram/: AGENTS.md  README.md  build.rs  candidates.rs  config.rs  files.rs  gram.rs  index.rs  lifecycle.rs  literals.rs  mod.rs
crates/core/src/index/snapshot/: artifact.rs  identity.rs  lease.rs  manifest.rs  mod.rs  opened.rs  tests.rs
crates/core/src/index/trigram/: AGENTS.md  README.md  builder.rs  file_table.rs  key.rs  lifecycle.rs  maintenance.rs  mod.rs  planner.rs  search.rs  types.rs
crates/core/src/query/: AGENTS.md  README.md  candidate_plan.rs  mod.rs  plan.rs  planner.rs  resolve.rs  spec.rs  trigram.rs
crates/core/src/search/: AGENTS.md  README.md  event.rs  execute.rs  filter.rs  hit.rs  input.rs  matcher.rs  mod.rs  mode.rs  options.rs  query.rs  report.rs  searcher.rs  stats.rs  task.rs  types.rs
crates/core/src/search/candidates/: indexed.rs  walk.rs
crates/core/src/search/emit/: format.rs  result.rs  stats.rs
crates/core/src/search/filter/: candidate.rs  config.rs  ignore.rs  mod.rs  type_filter.rs
crates/core/src/search/matcher/: mod.rs  pcre2.rs  rust.rs
crates/core/src/search/options/: mod.rs
crates/core/src/search/output/: mod.rs  mode.rs  style.rs
crates/core/src/search/pattern/: mod.rs
crates/core/src/search/query/: matcher.rs  mod.rs
crates/core/src/search/request/: mod.rs
crates/core/src/search/scan/: json.rs  standard.rs  summary.rs
crates/core/src/storage/: AGENTS.md  README.md  lexicon.rs  postings.rs
crates/core/src/walk/: mod.rs
crates/core/tests/: search_integration.rs
crates/core/tests/common/: mod.rs
crates/core/tests/grep/: main.rs  pipeline.rs  query.rs
crates/core/tests/grep/candidates/: walk.rs
crates/core/tests/grep/filter/: ignore.rs
crates/core/tests/index/: build.rs  main.rs  meta.rs  regression.rs  snapshot.rs  store.rs
crates/core/tests/query/: main.rs  planner.rs  spec.rs
crates/core/tests/search/: main.rs  query.rs
fuzz/: AGENTS.md  Cargo.toml  README.md
fuzz/fuzz_targets/: compile_only.rs  decode_postings.rs  search_usage.rs
(+40 files in other folders)
