[workspace]
resolver = "3"
members = ["crates/core", "crates/cli"]
exclude = ["fuzz"]

[workspace.package]
version = "0.5.0"
edition = "2024"
authors = ["Botir Khaltaev <btrghstk@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Indexed regex search over codebases (library + grep-like CLI)"
readme = "README.md"
homepage = "https://github.com/botirk38/sift"
documentation = "https://docs.rs/sift-core"
repository = "https://github.com/botirk38/sift"
keywords = ["grep", "regex", "search", "index", "codebase"]
categories = ["command-line-utilities", "development-tools"]

# Shared lint levels (members use `[lints] workspace = true`).
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
# Deny here so `cargo clippy` matches CI; `-D warnings` still catches rustc lints.
# Group priority -1 lets individual lint overrides (e.g. below) take precedence.
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
no_effect_underscore_binding = "deny"

# Line tables for Criterion / `cargo bench` without full debug info bloat.
[profile.bench]
inherits = "release"
debug = 1

# Release + line tables for perf / cargo-flamegraph (used by `scripts/profile.sh`, not benches).
[profile.profiling]
inherits = "release"
debug = 1
