[package]
name = "sift-grep"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Grep-like CLI for sift-core"
readme = "README.md"
license.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/sift-grep"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
autobenches = false

[lints]
workspace = true

[lib]
name = "sift_grep"
path = "src/lib.rs"

[[bin]]
name = "sift"
path = "src/main.rs"

[[bin]]
name = "sift-daemon"
path = "src/bin/sift-daemon.rs"

[dependencies]
anyhow = "1"
bitflags = "2"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
fslock = "0.2"
interprocess = "2"
notify = "9.0.0-rc.4"
rayon = "1"
sift-core = { version = "0.5.0", path = "../core" }
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "cli"
path = "benches/entry.rs"
harness = false
