[package]
name = "sift-core"
version.workspace = true
edition.workspace = true
description.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
bitflags = "2"
bstr = "1"
grep-cli = "0.1"
grep-matcher = "0.1"
grep-printer = "0.3"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
memchr = "2"
memmap2 = "0.9"
once_cell = "1"
rayon = "1"
regex-automata = "0.4"
regex-syntax = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
termcolor = "1"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "query"
harness = false

[[bench]]
name = "index"
harness = false

[[bench]]
name = "grep"
harness = false

[[test]]
name = "index"
path = "tests/index/main.rs"

[[test]]
name = "search"
path = "tests/search/main.rs"

[[test]]
name = "query"
path = "tests/query/main.rs"

[[test]]
name = "grep"
path = "tests/grep/main.rs"
