[package]
name = "sift-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme = "README.md"
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
bitflags = { version = "2", features = ["serde"] }
bstr = "1"
fslock = "0.2"
grep-cli = "0.1"
grep-matcher = "0.1"
grep-pcre2 = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
memchr = "2"
memmap2 = "0.9"
rayon = "1"
regex-automata = "0.4"
regex-syntax = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
unsigned-varint = "0.8"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "query"
harness = false

[[bench]]
name = "index"
harness = false

[[bench]]
name = "grep"
harness = false

[[test]]
name = "index"
path = "tests/index/main.rs"

[[test]]
name = "grep"
path = "tests/grep/main.rs"
